refactoring: remove unused function parameters